# economic-reporter

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  diagram.drawio  pyproject.toml  requirements-agentcore.txt
agent/: config.py  main.py  prompts.py
docs/architecture/: agentcore-architecture.drawio
terraform/account/aws-dev-apne2/apigateway/: main.tf  output.tf  provider.tf  var.apigateway.auto.tfvars  var.apigateway.tf
terraform/account/aws-dev-apne2/eventbridge/: main.tf  output.tf  provider.tf  var.default.tf  var.eventbridge.auto.tfvars  var.eventbridge.tf
terraform/account/aws-dev-apne2/lambda/: main.tf  output.tf  provider.tf  var.lambda.auto.tfvars  var.lambda.tf
terraform/account/dev/: main.tf  output.tf  provider.tf  var.default.tf  var.economic-reporter.tf
terraform/account/dev/environments/: dev.tfvars
terraform/account/shared/: main.tf  output.tf  provider.tf  var.default.tf  var.economic-reporter.tf
terraform/account/shared/environments/: shared.tfvars
terraform/modules/apigateway/: main.tf  outputs.tf  variables.tf
terraform/modules/authorizer/: main.tf  outputs.tf  variables.tf
terraform/modules/eventbridge/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda-layer/: main.tf  outputs.tf
tools/: email_sender.py  news_fetcher.py  news_fetcher_serpapi.py  slack_notifier.py
trigger/: agentcore_worker.py  slack_authorizer.py  slack_handler.py  worker.py
