[project]
name = "economic-reporter"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "strands-agents",
    "strands-agents-tools",
    "boto3",
    "python-dotenv",
    "requests",
]

[project.scripts]
report = "agent.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "tools"]
